--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ body { margin: 0; padding: 0;
      }
          #map { position: absolute; top: 50%; }
 
-}
-}
+
 
 h1 {
   font-family: "Raleway", "Helvetica", "sans-serif";
@@ -25,12 +24,14 @@ h1 {
 
 }
 
+
+
 .masthead {
-  background-image: url('https://images.unsplash.com/photo-1454391304352-2bf4678b1a7a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60');
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url('https://images.unsplash.com/photo-1454391304352-2bf4678b1a7a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 150px 0;
+  padding: 150px ;
 }
 
 
